Fix header flags menu positioning on smaller screens with wide menu.
(fix #82)

--- a/sources/stylesheets/components/_menu-language.scss
+++ b/sources/stylesheets/components/_menu-language.scss
@@ -28,7 +28,13 @@
   }
 
   .header-menu-wide & {
-    top: 4px;
+    @media screen and (max-width: $mobile) {
+      top: 0;
+    }
+
+    @media screen and (min-width: $mobile + 1) {
+      top: 4px;
+    }
 
     .language-flags-enabled & {
       margin-left: 24px;
